app/assets/stylesheets/application.scss
/* ... */
.listing_image {
  max-width: 150px;
  max-height: 65px;
}

// Modified from CKAN - for sidebar facets
ul.unstyled {
  @include unstyled-ul;
}

.nav-simple {
  margin: 0;
  list-style: outside none none;
  padding-bottom: 0;
}

.nav-simple li {
  padding: 0;
}

.nav-simple li:last-of-type {
  border-bottom: 0 none;
}

.nav-simple {
  .form-control {
    border: 0;
    box-shadow: none;
  }
}

.nav-block {
  padding: 7px 20px;
}

.nav-item {
  padding: 7px 20px;
  width: 100%;
}

.nav-item > a {
  position: relative;
  display: block;
  color: #333;
  padding: 7px 20px 7px 20px;
  text-decoration: none;
}

.nav-item > a:hover {
  background-color: #e6e6e6;
  border-color: #adadad;
}

.nav-item.active > a {
  position: relative;
  color: $brand-primary;
  background-color: #eee;
}

// End CKAN's sidebar facets

// Facet's title
.nav-heading {
  padding: 10px;
  //background-color: #f6f6f6;
  margin: 0;
}

.facet-option {
  display: flex !important;

  .facet-label {
    flex-grow: 1;
    white-space: nowrap;
    overflow: hidden;
    text-overflow: ellipsis;
    display: inline-block;
  }

  .facet-count, .remove-facet-icon {
    flex-shrink: 0;
    display: inline-block;
  }
  .facet-count {
    color: #999;
    padding-left: 5px;
  }
}

.active-filters {
  .remove-facet-icon {
    margin-left: 5px;
  }
}

.show-page-description {
  padding: 50px 0;
}

.tiny-avatar {
  max-width: 32px;
  min-width: 16px;
  border-radius: 2px;
  margin-left: 5px;
}

.small-avatar {
  max-width: 64px;
  min-width: 32px;
  border-radius: 4px;
  margin-left: 10px;
}

.medium-avatar {
  max-width: 50%;
  min-width: 100px;
  margin: 0 10px 10px 0;
}

.small-trainer-logo {
  max-width: 80px;
  border-radius: 4px;
  margin-left: 10px;
}

.medium-trainer-logo {
  max-width: 160px;
  border-radius: 4px;
  margin-left: 0;
}

.large-trainer-logo {
  max-width: 240px;
  border-radius: 4px;
  margin-left: 0;
}

.rounded-avatar {
  object-fit: cover;
  border-radius: 50%;
}

#user-menu .rounded-avatar {
  height: $line-height-computed;
  display: block;
  float: left;
  margin-right: 5px;
}

.search-results-count {
  margin-right: 5px;
  display: inline-block
}

.index-display-options {
  margin: 5px 0;
}

/* try adding !important  after 0px if doesn't work */

// Multiple input list on forms with + button to add more input fields dynamically
.multiple-input-list {
  //
  //.multiple-input-add {
  //  height: $input-height-base;
  //}

  .multiple-list-item {
    margin-bottom: 15px;
    display: inline-block;
    width: calc(100% - 72px);

    @media (min-width: $screen-sm-min) and (max-width: $screen-md-max) {
      width: calc(50% - 36px);
    }

    @media (min-width: $screen-lg-min) {
      width: calc(33% - 24px);
    }

    .multiple-input {
      display: inline;
      width: calc(100% - 60px);
    }

    .multiple-input-delete {
      display: inline;
    }
  }
}

.dropdown-toggle {
  cursor: pointer;
  //padding: $padding-base-horizontal $padding-base-vertical;
}

.dropdown-option {
  cursor: pointer;

  &:hover {
    background: $dropdown-link-hover-bg;
  }
}

.dropdown-menu {
  padding: $padding-base-vertical $padding-base-horizontal;
}

.dropdown-option-delete {
  background: none;
  border: none;
}

/* The max width is dependant on the container (more info below) */
.popover {
  max-width: 500px !important; /* Max Width of the popover (depending on the container!) */
}

// To make bootstrap button wrap button text into multiple lines
.btn {
  white-space: normal !important;
}

// Override margin for boostrap-s page-header
.page-header {
  margin: 20px 0 20px;
  border: none;
  padding: 0;
}

sup {
  vertical-align: top;
  position: relative;
  top: 5px;
}

.announcement {
  color: #333;
  border: 1px solid #ddd;
  background: #ffc;
  padding: 0.3em 0.6em;
  margin-bottom: 1em;
  line-height: 1.7;
}

#front-page-announcement {
  font-size: 120%;
  font-weight: bold;
  text-align: center;
}

#flash-container {
  text-align: center;
}

.schemaorg-element {
  display: none;
}

.search-panel {
  padding-top: 5px;

  .btn, .searchbox-sm, .input-group input {
    margin: 5px 0;
  }
}

.searchbox-sm {
  form {
    padding-right: 10px;
    text-align: center;
    margin: auto;
    max-width: 800px;

    border: none;
    border-radius: 50px;
    background-color: #F4F4F4;

    .searchbox-wrapper {
      display: flex;
    }

    .searchbox-field {
      border: none;
      box-shadow: none;
      outline: 0 none;
      background: transparent;
      line-height: $line-height-base;
      padding: $padding-base-vertical $padding-base-horizontal $padding-base-vertical ($padding-base-vertical + 16px);
      flex: 1;
      min-width: 220px;
      border-radius: 100px;
    }

    .searchbox-btn {
      border: none;
      background-color: transparent;
      opacity: 0.5;
      box-shadow: none;
      padding: 8px 8px 8px 8px;
      flex-shrink: 0;

      transition: $transition-time;

      &:hover {
        opacity: 1;
      }
    }
  }
}

.info-box {
  .info-box-header {
    padding: 10px;
    background-color: #f6f6f6;
    border-radius: 4px;
  }

  .info-box-content {
    margin-top: 10px;
  }
}

.muted {
  color: $text-muted;
}

.preview-image {
  overflow: auto;

  > img {
    width: 100px;
    max-height: 150px;
    margin: 0 10px 10px 0;
    float: left;
  }
}

.bounding-box {
  padding: 19px;
  margin-bottom: 20px;
  border: 1px solid #e3e3e3;
  border-radius: 4px;
}

.resource-type-icon {
  text-align: center;
}

.info-icon {
  font-size: 24px;
}

.info-icon-small {
  font-size: 16px;
}

.info-icon-large {
  font-size: 48px;
}

.gap {
  padding: 0 5px;
}

.delete-icon {
  vertical-align: middle;
  color: $brand-danger;
  font-weight: bold;
  font-size: 120%;

  &:hover {
    color: darken($brand-danger, 20%);
  }
}

.tool-suggestions-header {
  margin-bottom: 20px;
  color: $gray-darker;
}

.external-links {
  margin-top: 10px;
}

.fresh-icon {
  color: $brand-secondary;
  margin-left: 5px;
}
/* ... */

